--- a/Treehouse.FitnessFrog/Views/Shared/_Layout.cshtml
+++ b/Treehouse.FitnessFrog/Views/Shared/_Layout.cshtml
@@ -26,6 +26,8 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Secular+One" rel="stylesheet">
     <link href="~/Content/site.css" rel="stylesheet" type="text/css" />
     <script src="~/Scripts/modernizr-2.6.2.js"></script>
+    <link href="~/Scripts/bootstrap-datepicker3.min.css" rel="stylesheet" type="text/css" />
+    
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -62,5 +64,13 @@
 
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/bootstrap.min.js"></script>
+
+    <script src="~/Scripts/bootstrap-datepicker.min.js"></script>
+    <script>
+        $('.datepicker').datepicker({
+            format: 'dd/mm/yyyy'
+        });
+
+    </script>
 </body>
 </html>
